<resources>
    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <!-- RecyclerView -->
    <string name="title_recycler_view">RecyclerView</string>
    <!-- ViewPager -->
    <string name="title_view_pager">ViewPager</string>
    <!-- Firestore -->
    <string name="title_chat_rooms">ChatRooms</string>
    <string name="make_chat_room">チャットルーム作成</string>
    <string name="enter_chat_room_name">ルーム名を入れてください</string>
    <string name="make_message">メッセージ作成</string>
    <string name="enter_chat_message">メッセージを入力しよう</string>
    <!-- OkHttp3 -->
    <string name="title_ok_http">OkHttp</string>
    <string name="network_error_dialog_title">通信エラーです</string>
    <string name="network_error_dialog_message">通信状況が良い場所でもう一度お試しください。</string>
    <!-- Location -->
    <string name="title_location">Location</string>
    <string name="check_button">Check</string>
    <string name="marker_button">Marker</string>
    <string name="move_google_setting_dialog_title">位置情報をONにしてください</string>
    <string name="move_google_setting_dialog_message">「OK」を押して位置情報をオンにしてください。</string>
    <string name="location_permission_denied_dialog_title">位置情報</string>
    <string name="location_permission_denied_dialog_message">位置情報の使用権限を拒否されました。\nあとから設定する場合、設定アプリから権限を設定し直してください。</string>
    <!-- Service -->
    <string name="service_title">Service</string>
    <string name="start_service">サービスの開始</string>
    <string name="stop_service">サービスの停止</string>
    <string name="show_notification">通知の表示</string>
    <!-- FirebaseAuth -->
    <string name="firebase_auth_title">FirebaseAuth</string>
    <string name="firebase_auth_register">登録</string>
    <string name="firebase_auth_login">ログイン</string>
    <string name="firebase_auth_forget_password">パスワード再設定</string>
    <string name="firebase_auth_logout">ログアウト</string>
    <string name="firebase_auth_mail">メールアドレス</string>
    <string name="firebase_auth_hint_mail">メールアドレスを入力してください</string>
    <string name="firebase_auth_password">パスワード</string>
    <string name="firebase_auth_hint_password">8文字以上16文字以内</string>
    <string name="firebase_auth_name">ニックネーム</string>
    <string name="firebase_auth_hint_name">1文字以上10文字以内</string>
    <string name="firebase_auth_execute">実行</string>
    <string name="firebase_auth_change_password">パスワード変更</string>
    <string name="firebase_auth_success">成功</string>
    <string name="firebase_auth_error">失敗</string>
    <string name="firebase_auth_warn_mail">メールアドレスを正しく入力してください</string>
    <string name="firebase_auth_warn_password">パスワードを正しく入力してください</string>
    <string name="firebase_auth_warn_name">ニックネームを正しく入力してください</string>
    <string name="firebase_auth_warn_login">ログインしてください</string>
    <string name="firebase_auth_input_new_password">8文字以上16文字以上で新しいパスワードを入力してください</string>
    <!-- FirebaseStorage -->
    <string name="firebase_storage_title">FirebaseStorage</string>
    <string name="firebase_storage_select_image">画像を選ぶ</string>
    <string name="firebase_storage_upload">画像をアップロード</string>
    <string name="firebase_storage_camera">カメラ起動</string>
    <!-- TagView -->
    <string name="add_short_ag">短い</string>
    <string name="add_long_ag">長い</string>
    <string name="add_super_long_ag">すごく長い</string>
    <string name="clear_tag">リセット</string>
    <!-- RecyclerViewSample -->
    <string name="title_recycler_view_sample">RecyclerViewSample</string>
    <!-- AacActivity -->
    <string name="title_aac">AAC</string>
    <!-- ChildFragmentActivity -->
    <string name="title_child_fragment">ChildFragment</string>
    <!-- Users -->
    <string name="users_title">Users</string>
    <string name="users_get_all">全件取得</string>
    <string name="users_get_where">条件取得</string>
    <string name="users_get_filter">全件取得 -> filter</string>
</resources>
