<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addShortTagButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.exsample.androidsamples.tagView.TagView
                android:id="@+id/tagView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:textSize="15dp"
                app:tagPadding="2dp"
                app:tagMargin="2dp"
                app:backgroundColor="@android:color/black"
                app:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/addShortTagButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_short_ag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addLongButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addLongButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_long_ag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addSuperLongTagButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/addShortTagButton" />

    <Button
        android:id="@+id/addSuperLongTagButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_super_long_ag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clearTagButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/addLongButton" />


    <Button
        android:id="@+id/clearTagButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/addSuperLongTagButton" />
</androidx.constraintlayout.widget.ConstraintLayout>